# Opayk-Miner

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  README.md  cpu-miner.c  example-cfg.json  miner.h  sha2-x64.S  sha2.c  util.c
progminer/: CMakeLists.txt  progminer.cpp  progminer.h
progminer/libdevcore/: vector_ref.h
progminer/libethash-cl/: CLMiner.cpp  CMakeLists.txt
progminer/libethcore/: CMakeLists.txt  EthashAux.cpp  EthashAux.h  Farm.cpp  Farm.h  Miner.h
randomx/: CMakeLists.txt  randomx.c  randomx.cpp  rx.h
